--- a/teaching/25S-5218/index.htm
+++ b/teaching/25S-5218/index.htm
@@ -166,7 +166,13 @@ course website regularly for updated reading materials.</font>
 			<font size="4"> <b>03/26/2023:</b> The schedule of project presention is <a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">out</font></a>.</font>
 		</li>-->
 		<li>
-			<font size="4"> <b>03/03/2023:</b> The project proposal is due on 3/13.</font>
+			<font size="4"> <b>04/08/2025:</b> <a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">Project presentation schedule</font></a> is out.</font>
+		</li>
+		<li>
+			<font size="4"> <b>04/08/2025:</b> The project report is due on 4/21.</font>
+		</li>
+		<li>
+			<font size="4"> <b>03/03/2025:</b> The project proposal is due on 3/13.</font>
 		</li> 
 		<li>
 			<font size="4"> <b>01/13/2025:</b> Course website has been launched.</font>
