--- a/teaching/25S-5218/presentation_schedule.htm
+++ b/teaching/25S-5218/presentation_schedule.htm
@@ -36,7 +36,7 @@ div img:hover{
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Spring 2024</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Spring 2025</b></font> &nbsp; &nbsp; 
 	<br>
 	</center>
 	</p>
@@ -89,11 +89,11 @@ div img:hover{
 		</li>
 		<br>
 		<li>
-			<font size="4"> <b>Q4: Can I use my laptop for the presentation?</b></font>
+			<font size="4"> <b>Q4: What device can I use for the presentation?</b></font>
 			
 			<br>
 			
-			<font size="4"> A4: Yes. You're encouraged to use your own laptop for presentation. You can also copy your slide to the computer in the classroom for presentation. Remember to name your slide with your project name if you do so.</font>
+			<font size="4"> A4: <font style="color: blue;">Please use the computer in the classroom for your presentation, because there might be some problems with connections to your own computer. You need to upload your slide to the computer in classroom before presenation.</font></font>
 		</li>
 		<br>
 		<li>
@@ -141,184 +141,170 @@ div img:hover{
 		</tr> 
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/16 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/15 </font></td>
 			<td width=800 style='width:800.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Ikram Mohammed </font>
+				Muhammad Zubair Hasan and Fahmida Yasmin Rifat </font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/16 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/15 </font></td>
 			<td width=800 style='width:800.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Yuvaraj Sriramoju, Achyuth Reddy Kanumanthu, and Vamshi Kalyan Yerramilli </font>
+				Sanjana Dadi, Venkata Subba Reddy Pallerla, and Hareesh Sirigiri </font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/16 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/15 </font></td>
 			<td width=800 style='width:800.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Sushant Thapa and Joseph Caldwell </font>
+				Darshan Rohit Karkera and Escamilla Varela, Andres </font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/16 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/15 </font></td>
 			<td width=800 style='width:800.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Qi Cai and Xin Gao</font>
+				Neha Reddy Chilka, Harshith Mullapudi, and Supraja Mula</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/16 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/15 </font></td>
 			<td width=800 style='width:800.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Sreeja Bommineni, Navya Bade, and Nandini Nagiri</font>
+				Anusha Marella, Shreya Gandra, Harsha Podali, and Pooja Kamasani Reddeppareddy</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/18 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/15 </font></td>
+			<td width=800 style='width:800.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Kesava Ontipuli, Tarun Preetham Chintada, and Niharika Chowdary Nuthalapati</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/17 </font></td>
 			<td width=800 style='width:800.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Ahmed Aljohani</font>
+				Akiharu Esashi</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/18 </font></td>
+			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/17 </font></td>
 			<td width=800 style='width:800.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Guna Sindhuja Siripurapu, Rohit Potluri, and Trisha Reddy Nidjintha</font>
+				S M Saiful Islam Badhon, Anirban Saha Anik, Rafid Ishrak Jahan, and Avijet Shil</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/18 </font></td>
+			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/17 </font></td>
 			<td width=800 style='width:800.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Aditya Tripathi, Poorna Chander Alladi, and Priyanka Bai Durvas</font>
+				Yashwanth Chiluka, Gayaetiri Chalasani, Cuicui Zhang, and Jinyu Liu</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/18 </font></td>
+			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/17 </font></td>
 			<td width=800 style='width:800.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Lakshmi manjusha yarreddu, Vijay Kumar Goud Rekala, and Bala Naga Narasimha Reddy Machha</font>
+				Nithish Karanam, Mahesh Chowdary Ponnaganti, and Lingala Dinesh Teja</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/18 </font></td>
+			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/17 </font></td>
 			<td width=800 style='width:800.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Xinpeng Xie, Chenyang Yu, and Chaowei Shi</font>
+				Dhananjaya Paliwal, Pratham Santosh Mavle, and Owais Jafer</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/23 </font></td>
+			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/17 </font></td>
+			<td width=800 style='width:800.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Nithish Reddy Gangannagari, Vineela Vaikunthapu, and Satish Vepuri</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/22 </font></td>
 			<td width=800 style='width:800.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Yaswanth Thota, Naresh kampasati, and sushanth kodipyaka</font>
+				Jacob Benz</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/23 </font></td>
+			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/22 </font></td>
 			<td width=800 style='width:800.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Ashwini Sharma and Arun Kumar Gangireddy</font>
+				Isaac Gregory and Fahmid Shahriar Iqbal</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/23 </font></td>
+			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/22 </font></td>
 			<td width=800 style='width:800.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Shiny Shamma Kota, Sai Teja Narra Venkata, and Harinath Chakali</font>
+				Sushanth Seela, Ashritha Bollam	Mamatha Reddygari, and Uday Kiran Chimpiri</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/23 </font></td>
+			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/22 </font></td>
 			<td width=800 style='width:800.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Divyashree Bislahalli and Sribala Putcha</font>
+				Sri Harsha Gurram, Abhishek Marpu, Shivanandhareddy Vasudevula, and Venkat sai shankar reddy Koppula</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/23 </font></td>
+			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/22 </font></td>
 			<td width=800 style='width:800.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Rohit suddala, Mukunda Krishna Ramishetty, and Harshavardhan Reddy Marella</font>
+				Poojitha Vempalli, Akshitha Volluru, Leela Krishna Ravuri, and Midhun Danda</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/22 </font></td>
+			<td width=800 style='width:800.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Zefeng He</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/24 </font></td>
 			<td width=800 style='width:800.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Saini Sai Preetham</font>
+				Rubayet Kabir Tonmoy and Tasfia Seuti</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/24 </font></td>
 			<td width=800 style='width:800.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Vishal Rachuri, Ram Srinivas Katragadda, and Anusha chilakamarri</font>
+				Maneesh Kumar Chintakindi, Monish Galla, and Sudhakar Koppula</font>
 			</td>
 		</tr>
 		
 		<tr>
-			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/24 </font></td>
 			<td width=800 style='width:800.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				bing fan</font>
+				Yen Pham</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/24 </font></td>
 			<td width=800 style='width:800.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Maa Venkat Satya Narayana, Sai Karthik Yadav D, and Mohammed Adeeb Farhan</font>
+				Varshith Peddineni, Abhiram Kandoori, and Bhimavarapu Sreekar Reddy</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/24 </font></td>
 			<td width=800 style='width:800.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Loku Bhanu Teja Reddy Singadi, Jaya Sai Krishna Paleru, and Kandula Sunny Kumar</font>
+				Mohammed Abrar Baig, Nirupama Karanam, Niharika Karanam, and Munilikhitha Mettukuru</font>
 			</td>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/30 </font></td>
-			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Srinivas Abburi, Tejaswi Mandava, and Sumanth Ethamukkala </font>
-			</td>
-		</tr>
-
-		<tr>
-			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/30 </font></td>
-			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Lingutla Deepika, Malapati Ushashree, and Phani sri Vinnakota</font>
-			</td>
-		</tr>
-
-		<tr>
-			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/30 </font></td>
-			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Bizhan Alipour PIjani and Md Amit Khan</font>
-			</td>
-		</tr>
-
-		<tr>
-			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/30 </font></td>
-			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Nagasai mandalapu, SaiKrishna meduri, and Krishna Varma Ayinampudi</font>
-			</td>
-		</tr>
-
-		<tr>
-			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/30 </font></td>
-			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Likhil Penujuli, Sai Sandhya Nannapaneni, and Dishith Nalagatla</font>
-			</td>
-		</tr>
-
-		<tr>
-			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/30 </font></td>
-			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Bhavani Mandula</font>
+			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/24 </font></td>
+			<td width=800 style='width:800.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Alexander Metzger</font>
 			</td>
 		</tr>
 		
