--- a/teaching/25S-5218/index.htm
+++ b/teaching/25S-5218/index.htm
@@ -646,7 +646,7 @@ course website regularly for updated reading materials.</font>
 		</font> </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 				<font size="4" color="#FF0000"> 
-					Date: TBD, at K110
+					Date: 10:00 am-12:00 pm on May 8, at K110
 				</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
