--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
     <div class="photo_intro">
         <img src="./personal/hfan-2022.jpeg" alt="Heng Fan" class="photo" height="130">
         <div class="intro">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font size="5">Heng Fan</font></span>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font>Heng Fan</font></span>
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size="4" style="line-height: 170%">Assistant Professor</font>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size="4" style="line-height: 100%">Assistant Professor</font>
             <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://computerscience.engineering.unt.edu/"><font color="2D61FF">Department of Computer Science and Engineering</font></a>, <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a>
+			<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://computerscience.engineering.unt.edu/"><font color="2D61FF">Department of Data Science (Affiliated Faculty)</font></a>, <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a>
             <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office: Room F284, UNT Discovery Park, 3940 N Elm St, Denton, TX 76207
             <br>
@@ -55,7 +57,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	<HR>
 	
     <font size="4" color="black"><b>Short Bio</b></font>
-    <p style="margin-top:5px;"><font>Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#2D61FF">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a>, and a faculty member of the <a href="https://llavi-lab.github.io/" target="https://llavi-lab.github.io/"><font color="#2D61FF">LLaVi Lab</font></a>. He received his B.S. from Huazhong Agricultural University in 2013 and Ph.D. (advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#2D61FF">Professor Haibin Ling</font></font></a>) from Stony Brook University in 2021, respectively. His research interests include computer vision with a particular interest in various video analysis tasks using vision and language, robotics with a focus on robot vision perception, and medical image analysis. He serves or has served as an Associate Editor for <i>Pattern Recognition</i> (PR) and as Area Chairs for major computer vision relevant conferences such as ICCV (2025), WACV (2022-2025), and ICME (2025).
+    <p style="margin-top:5px;"><font>Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#2D61FF">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a>, and a faculty member of the <a href="https://llavi-lab.github.io/" target="https://llavi-lab.github.io/"><font color="#2D61FF">LLaVi Lab</font></a>. He is also an affiliated faculty in the <a href="https://computerscience.engineering.unt.edu/"><font color="2D61FF">Department of Data Science</font></a>.		He received his B.S. from Huazhong Agricultural University in 2013 and Ph.D. (advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#2D61FF">Professor Haibin Ling</font></font></a>) from Stony Brook University in 2021, respectively. His research interests include computer vision with a particular interest in various video analysis tasks using vision and language, robotics with a focus on robot vision perception, and medical image analysis. He serves or has served as an Associate Editor for <i>Pattern Recognition</i> (PR) and as Area Chairs for major computer vision relevant conferences such as ICCV (2025), WACV (2022-2025), and ICME (2025).
     
 	<HR>
 	
