--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -188,7 +188,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: Automated Classification of Model Errors on ImageNet</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Junjie Qiu</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 04-14-2025 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
