--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -197,8 +197,8 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
-                <p><b>Speaker:</b> <a href="https://idealabunt.github.io/home/haihua-chen.html", target="_blank">Dr. Haihua Chen</a> from Data Science at UNT</p>
+                <h3><font color="#355DDC">How to Write a Paper</font></h3>
+                <!-- <p><b>Speaker:</b> <a href="https://idealabunt.github.io/home/haihua-chen.html", target="_blank">Dr. Haihua Chen</a> from Data Science at UNT</p> -->
                 <p><b>Time:</b> 11:00am-12:00pm on 04-21-2025 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
             </div>
