--- a/publications.html
+++ b/publications.html
@@ -81,6 +81,38 @@
 		<br>
 	
 		<table border=0 cellpadding=4>
+			
+			<tr>
+				<td><img src="./publication/inpainting-IJCV.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">High-Fidelity Image Inpainting with Multimodal Guided GAN Inversion</font>
+						<br>
+						<font color="#000000">L. Zhang, Y. Yu, J. Yao, and H. Fan</font>
+						<br>
+						<font>International Journal of Computer Vision (<b>IJCV</b>), 2025, in press.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2504.12844" target="_blank"><font color="#2D61FF">paper</font></a> 
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/DAM.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">DAM: Dynamic Attention Mask for Long-Context Large Language Model Inference Acceleration</font>
+						<br>
+						<font color="#000000">H. Zhang, H. Fan, K. Sha, Y. Huang, and Y. Feng</font>
+						<br>
+						<font>Annual Meeting of the Association for Computational Linguistics (<b>ACL Findings</b>), 2025.</font>
+						<br>
+						paper &nbsp; code
+						<br>
+					</p>
+				</td>
+			</tr>
 
 			<tr>
 				<td><img src="./publication/cvpr25.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
