--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 
 	<font size="4" color="black"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2025-05:</font> A paper on high-fidelity image inpainting (pdf) is accepted to IJCV.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2025-05:</font> A paper on high-fidelity image inpainting (<a href="https://arxiv.org/abs/2504.12844" target="_blank"><font><font color="#2D61FF">pdf</font></font></a>) is accepted to IJCV.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-05:</font> A paper on efficient large language model (pdf) is accepted to Findings of <a href="https://2025.aclweb.org/" target="_blank"><font><font color="#2D61FF">ACL 2025</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-04:</font> Invited <a href="https://www.yapengtian.com/t/6384S25/" target="_blank"><font><font color="#2D61FF">guest lecture</font></font></a> at UT Dallas on visual object tracking.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-04:</font> I will be serving as an Area Chair for <a href="https://neurips.cc/" target="_blank"><font><font color="#2D61FF">NeurIPS 2025</font></font></a>.</li>
