--- a/publications.html
+++ b/publications.html
@@ -106,7 +106,7 @@
 						<br>
 						<font color="#000000">H. Zhang, H. Fan, K. Sha, Y. Huang, and Y. Feng</font>
 						<br>
-						<font>Annual Meeting of the Association for Computational Linguistics (<b>ACL Findings</b>), 2025.</font>
+						<font>Findings of the Annual Meeting of the Association for Computational Linguistics (<b>ACL Findings</b>), 2025.</font>
 						<br>
 						paper &nbsp; code
 						<br>
