--- a/service.html
+++ b/service.html
@@ -63,6 +63,13 @@
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Area Chair, British Machine Vision Conference (<font style="font-weight:bold">BMVC</font>), 2025
+				<br>
+			</p>
+		</li>
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				Area Chair, IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>), 2022, 2023, 2024, 2025
 				<br>
 			</p>
