--- a/group.html
+++ b/group.html
@@ -36,7 +36,6 @@
 		
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, volunteer research assistant</li> <!--(female)--> 
 		
-		<li><font style="font-weight:bold; line-height: 120%">Hasini Kanuru</font>, Undergraduate student</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Michelle Li</font>, K-12 student from TAMS</li> <!-- (female) -->
 		<li><font style="font-weight:bold; line-height: 120%">Jonas Li</font>, K-12 student from TAMS</li>
 		
@@ -60,6 +59,7 @@
 	<br>
 	<ul style="margin-top:5px;">
 
+		<li><font style="font-weight:bold; line-height: 120%">Hasini Kanuru</font>, Undergraduate student, 2025</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Andres Escamilla Varela</font>, MS student, 2025</li>
 		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student, 2025</li> <!-- entennial High School -->
 		<li><font style="font-weight:bold; line-height: 120%">Arpit Khavate</font>, High School student, 2024</li> <!-- ebanon Trail High School -->
