--- a/publications.html
+++ b/publications.html
@@ -124,7 +124,7 @@
 						<br>
 						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025.</font>
 						<br>
-						paper &nbsp; code
+						<a href="https://openaccess.thecvf.com/content/CVPR2025/html/Xue_CorrBEV_Multi-View_3D_Object_Detection_by_Correlation_Learning_with_Multi-modal_CVPR_2025_paper.html" target="_blank"><font><font color="#2D61FF">paper</font></font></a>
 						<br>
 					</p>
 				</td>
