--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 
 	<font size="4" color="black"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2025-06:</font> A paper on efficient medical image segmentation is accepted to <a href="https://conferences.miccai.org/2025/en/" target="_blank"><font><font color="#2D61FF">MICCAI 2025</font></font></a>.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2025-06:</font> Two papers on efficient tracking and action recognition are accepted to <a href="https://www.iros25.org/" target="_blank"><font><font color="#2D61FF">IROS 2025</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-05:</font> I will be serving as an Area Chair for <a href="https://bmvc2025.bmva.org/" target="_blank"><font><font color="#2D61FF">BMVC 2025</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-05:</font> A paper on high-fidelity image inpainting (<a href="https://arxiv.org/abs/2504.12844" target="_blank"><font><font color="#2D61FF">pdf</font></font></a>) is accepted to IJCV.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-05:</font> A paper on efficient large language model (pdf) is accepted to Findings of <a href="https://2025.aclweb.org/" target="_blank"><font><font color="#2D61FF">ACL 2025</font></font></a>.</li>
