--- a/publications.html
+++ b/publications.html
@@ -108,7 +108,7 @@
 						<br>
 						<font>Findings of the Annual Meeting of the Association for Computational Linguistics (<b>ACL Findings</b>), 2025.</font>
 						<br>
-						paper &nbsp; code
+						<a href="https://arxiv.org/abs/2506.11104" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/ResponsibleAILab/DAM" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
 					</p>
 				</td>
