--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 src="personal/at.gif">cs.stonybrook.edu  -->
 			<br>
 			
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="https://llavi-lab.github.io/" target="https://llavi-lab.github.io/"><font color="#2D61FF">LLaVi Lab</font></a>]
-			[<a href="personal/Fan-selected-cv.pdf" target="_blank"><font color="#2D61FF">Curriculum Vitae</font></a>]
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="personal/Fan-selected-cv.pdf" target="_blank"><font color="#2D61FF">Curriculum Vitae</font></a>]
 			[<a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#2D61FF">Google Scholar</font></a>]
 			[<a href="https://www.linkedin.com/in/heng-fan-64697aaa/" target="https://www.linkedin.com/in/heng-fan-64697aaa/"><font color="#2D61FF">LinkedIn</font></a>]
 			[<a href="https://dblp.org/pid/20/10120-1.html" target="https://dblp.org/pid/20/10120-1.html"><font color="#2D61FF">DBLP</font></a>]
