--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,54 @@
 		<table border=0 cellpadding=4>
 			
 			<tr>
+				<td><img src="./publication/MICCAI-25-HRViT.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Edge-Aware Token Halting for Efficient and Accurate Medical Image Segmentation</font>
+						<br>
+						<font color="#000000">Y. Guo, B. Song, H. Fan, and E. Cheng</font>
+						<br>
+						<font>International Conference on Medical Image Computing and Computer Assisted Intervention (<b>MICCAI</b>), 2025.</font>
+						<br>
+						<a href="./publication/MICCAI-25-HRViT.pdf" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://github.com/guoyh6/hrvit" target="_blank"><font color="#2D61FF">code</font></a>
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/IROS-25-tracking.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Efficient and Accurate Low-Resolution Transformer Tracking  </font>
+						<br>
+						<font color="#000000">S. Dong, Y. Feng, J. Liang, Q. Yang, Y. Lin, and H. Fan</font>
+						<br>
+						<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2025.</font>
+						<br>
+						paper &nbsp; code
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/IROS-25-action-recognition.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">G3CN: Gaussian Topology Refinement Gated Graph Convolutional Network for Skeleton-Based Action Recognition</font>
+						<br>
+						<font color="#000000">H. Ren, Z. Luo, H. Fan, X. Yuan, L. Zhang, and G. Wang</font>
+						<br>
+						<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2025.</font>
+						<br>
+						paper &nbsp; code
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
 				<td><img src="./publication/inpainting-IJCV.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
