--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,54 @@
 		<table border=0 cellpadding=4>
 			
 			<tr>
+				<td><img src="./publication/ICCV-25-PRVQL.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">PRVQL: Progressive Knowledge-guided Refinement for Robust Egocentric Visual Query Localization</font>
+						<br>
+						<font color="#000000">B. Fan, Y. Feng, Y. Tian, J. Liang, Y. Lin, Y. Huang, and H. Fan</font>
+						<br>
+						<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2025.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2502.07707" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://github.com/fb-reps/PRVQL" target="_blank"><font color="#2D61FF">code</font></a>
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/ICCV-25-GSOT3D.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">GSOT3D: Towards Generic 3D Single Object Tracking in the Wild</font>
+						<br>
+						<font color="#000000">Y. Jiao, Y. Li, J. Ding, Q. Yang, S. Fu, H. Fan&dagger;, and L. Zhang&dagger;</font>
+						<br>
+						<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2025.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2412.02129" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://github.com/ailovejinx/GSOT3D" target="_blank"><font color="#2D61FF">code-data</font></a>
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/ICCV-25-OV-MOT.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Attention to Trajectory: Trajectory-Aware Open-Vocabulary Tracking</font>
+						<br>
+						<font color="#000000">Y. Li, Y. Jiao, D. Meng, H. Fan&dagger;, and L. Zhang&dagger;</font>
+						<br>
+						<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2025.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2503.08145" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; code
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
 				<td><img src="./publication/MICCAI-25-HRViT.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
