--- a/service.html
+++ b/service.html
@@ -70,7 +70,7 @@
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				Area Chair, IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>), 2022, 2023, 2024, 2025
+				Area Chair, IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>), 2022, 2023, 2024, 2025, 2026
 				<br>
 			</p>
 		</li>
