--- a/publications.html
+++ b/publications.html
@@ -168,7 +168,7 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">G3CN: Gaussian Topology Refinement Gated Graph Convolutional Network for Skeleton-Based Action Recognition</font>
 						<br>
-						<font color="#000000">H. Ren, Z. Luo, H. Fan, X. Yuan, L. Zhang, and G. Wang</font>
+						<font color="#000000">H. Ren, Z. Luo, H. Fan, X. Yuan, G. Wang, and L. Zhang</font>
 						<br>
 						<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2025.</font>
 						<br>
