--- a/publications.html
+++ b/publications.html
@@ -184,9 +184,9 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">High-Fidelity Image Inpainting with Multimodal Guided GAN Inversion</font>
 						<br>
-						<font color="#000000">L. Zhang, Y. Yu, J. Yao, and H. Fan</font>
+						<font color="#000000">L. Zhang*, Y. Yu*, J. Yao, and H. Fan</font>
 						<br>
-						<font>International Journal of Computer Vision (<b>IJCV</b>), 2025, in press.</font>
+						<font>International Journal of Computer Vision (<b>IJCV</b>), 133: 5788-5805, 2025.</font>
 						<br>
 						<a href="https://arxiv.org/abs/2504.12844" target="_blank"><font color="#2D61FF">paper</font></a> 
 						<br>
