--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -109,25 +109,25 @@ div img:hover{
 	</p>
 	
 	<p style="text-align:justify">
-	<font size="4">The aim of this course is to provide an introduction to the design and analysis of fundamental data
-	structures and algorithms. The lectures will emphasize the theoretical aspects, while the homework
-	assignments will focus more on the programming and hands-on experience, meant to reinforce the
-	theoretical aspects covered in lectures.</font>
+	<font size="4">The goal of this course is to introduce students to various advanced data structures (such as lists, stacks, queues, trees, hash tables, graphs), 
+		algorithms (such as a variety of sorting algorithms, tree-related algorithms, and graph-related algorithms), and their implementations. 
+		By the end of this course, each student will have a strong understanding of fundamental data structures, appreciate the levels of abstraction used in 
+		their design and analysis, and improve their software development skills through implementation and application of these data structures and related algorithms.</font>
 	</p>
 	
 	<HR>
 	
 	<p style="margin-top:5px;">
-	<font size="4"> <b>Recommended textbooks</b></font> 
+	<font size="4"> <b>Textbook</b></font> 
 	</p>
 	
 	<p style="text-align:justify">
 	<ul>
-		<li>
+		<!-- <li>
 			<font size="4"> <i>Data Structures & Algorithm Analysis in C++</i> (4th edition), by Mark Allen Weiss </font>
-		</li>
+		</li> -->
 		<li>
-			<font size="4"> <i>Introduction to Algorithms</i>, by Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, and Clifford Stein </font>
+			<font size="4"> <i>Introduction to Algorithms</i>, by Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, and Clifford Stein, 3rd Edition.</font>
 		</li>
 	</ul>
 	</p>
@@ -140,25 +140,7 @@ div img:hover{
 		
 		<ul>
 			<li>
-				<font size="4"> <b>11/28/2022:</b>Assignment 4 is out, due at 11:59pm on 12/09/2022. </font>
-			</li>
-			<li>
-				<font size="4"> <b>11/10/2022:</b>  <a href=".\project.htm" target="_blank"><font color="#0099ff">Course project</font></a> is out, due at 11:50pm on 12/09/2022. The</font>
-			</li>
-			<li>
-				<font size="4"> <b>11/08/2022:</b>Assignment 3 is out, due at 11:59pm on 11/22/2022. </font>
-			</li>
-			<li>
-				<font size="4"> <b>10/19/2022:</b> Midterm will be on 10/25/2022.</font>
-			</li>
-			<li>
-				<font size="4"> <b>10/04/2022:</b> Assignment 2 is out, due at 11:59pm on 10/25/2022.</font>
-			</li>
-			<li>
-				<font size="4"> <b>09/15/2022:</b> Assignment 1 is out, due at 11:59pm on 9/29/2022.</font>
-			</li>
-			<li>
-				<font size="4"> <b>08/28/2022:</b> The course website has been launched.</font>
+				<font size="4"> <b>08/18/2022:</b> The course website has been launched.</font>
 			</li>
 		</ul>
 	
@@ -176,20 +158,20 @@ div img:hover{
 		</tr> 
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 8/30 </font></td>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 8/18 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Introduction and course overview <!--  [<a href="slides\3110-lecture 1-Introduction and course overview.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] --></font>
+				Introduction and Course Overview [<a href="slides\2110-lecture 1.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/1 </font></td>
-			<td width=500  style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Algorithm Analysis I <!-- [<a href="slides\3110-lecture 2-Algorithm Analysis I.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]  --></font></td>
+		<!-- <tr>
+			<td width=100 style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 8/20 </font></td>
+			<td width=500  style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Review of Objected Oritend Programming [<a href="slides\2110-lecture 2.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
+		</tr> -->
 		
-		 <tr>
+		<!-- <tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 9/6 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				Algorithm Analysis I (cont.) </font>
@@ -216,7 +198,7 @@ div img:hover{
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				Recurrence Relations (cont.) </font>
 			</td>
-			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 1, due at 9/29/2022 </font></td> <!--Assignment 1, due at 9/21/2021-->
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 1, due at 9/29/2022 </font></td>
 		</tr>
 		
 		<tr>
@@ -413,136 +395,7 @@ div img:hover{
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" color="red"> <b>Final Exam (10:30 a.m. - 12:30 p.m.)</b></font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr> 
-
-		<!--
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/7 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Splay Tree (cont.) [<a href="slides\3110-lecture 8-Splay Tree.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 8</b> <br> 10/12 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Priority Queues [<a href="slides\3110-lecture 9-Priority Queues.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
-			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> -</font></td>
-		</tr>
-		
-		
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/14 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Priority Queues (cont.) [<a href="slides\3110-lecture 9-Priority Queues.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] and Review</font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 9</b> <br> 10/19 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Hashing [<a href="slides\3110-lecture 10-Hashing.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
-			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> -</font></td>
-		</tr>
-		
-		
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/21 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" color="red"> <b>Mid-term Exam</b></font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 10</b> <br> 10/26 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Sorting [<a href="slides\3110-lecture 11-Sorting.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
-			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 3, due at 11/2/2021</font></td>
-		</tr>
-		
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/28 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Sorting (cont.) [<a href="slides\3110-lecture 11-Sorting.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 3 </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 11</b> <br> 11/2 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Sorting (cont.) [<a href="slides\3110-lecture 11-Sorting.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
-			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 11/4 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Graph I [<a href="slides\3110-lecture 12-Graph I.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 12</b> <br> 11/9 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Graph I (cont.) [<a href="slides\3110-lecture 12-Graph I.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
-			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 11/11 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Graph II [<a href="slides\3110-lecture 13-Graph II.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 4 </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 13</b> <br> 11/16 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Graph II (cont.) [<a href="slides\3110-lecture 13-Graph II.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
-			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 4, due at 12/2/2021 </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 11/18 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Graph III [<a href="slides\3110-lecture 14-Graph III.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 14</b> <br> 11/23 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Graph III (cont.) [<a href="slides\3110-lecture 13-Graph II.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] and Review</font>
-			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 11/25 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Thanksgiving (no class)</font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 15</b> <br> 11/30 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Question-answering </font>
-			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 12/2 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Reading Day</font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 16</b> <br> 12/9 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" color="red"> <b>Final Exam</b></font>
-			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr> -->
+		</tr>  -->
 		
 	</table>
 	</p>
@@ -556,22 +409,19 @@ div img:hover{
 	<p style="text-align:justify">
 	<ul>
 		<li>
-			<font size="4"> Quizzes: 20% </font>
+			<font size="4"> Quizzes: 25% </font>
 		</li>
 		<li>
 			<font size="4"> Assignments: 40%</font>
 		</li>
 		<li>
-			<font size="4"> Midterm exam (closed book): 15%</font>
+			<font size="4"> Midterm exam: 15%</font>
 		</li>
 		<li>
-			<font size="4"> Final exam (closed book): 20%</font>
+			<font size="4"> Final exam: 20%</font>
 		</li>
 		<li>
-			<font size="4"> Attendance: 5%</font>
-		</li>
-		<li>
-			<font size="4"> Course project (optional): 5% (bonus)</font>
+			<font size="4"> Course project: 5% (bonus)</font>
 		</li>
 		
 	</ul>
