--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -60,7 +60,7 @@ div img:hover{
 			<font size="4"> Phone: 940-565-3209 </font>
 		</li>
 		<li>
-			<font size="4"> Office hours: Monday 9:00-11:00 pm or by appointment</font>
+			<font size="4"> Office hours: Monday  8:30 - 10:30 am or by appointment</font>
 		</li>
 		<br>
 
@@ -88,12 +88,12 @@ div img:hover{
 			<ul>
 				<li>
 				  <font size="4">Bing Fan:<br>
-				  Office hours: TBD (Office: F232)<br>
+				  Office hours: 2:00 - 4:00 pm on Monday (Office: F232) or by appointment <br>
 				  E-mail: bingfan@my.unt.edu</font>
 				</li>
 				<li>
 				  <font size="4">Phongsiri Nirachornkul:<br>
-				  Office hours: TBD (Office: TBD)<br>
+				  Office hours: 11:00 - 1:00 pm on Tuesday (Office: GAB 330) or by appointment<br>
 				  E-mail: TBD</font>
 				</li>
 			</ul>
