--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -94,7 +94,7 @@ div img:hover{
 				<li>
 				  <font size="4">Phongsiri Nirachornkul:<br>
 				  Office hours: 11:00 - 1:00 pm on Tuesday (Office: GAB 330) or by appointment<br>
-				  E-mail: TBD</font>
+				  E-mail: PhongsiriNirachornkul@my.unt.edu</font>
 				</li>
 			</ul>
 		</li>
