--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -160,7 +160,49 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 8/18 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Introduction and Course Overview [<a href="slides\2110-lecture 1.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+				Introduction and Course Overview [<a href="slides\2110-topic 1-Introduction and Course Overview.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+				<br>
+				Review of C++ and Object-Oriented Programming [<a href="slides\2110-topic 2-Review of C++ and Objected Oriented Programming.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  8/20 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Review of C++ and Object-Oriented Programming (cont.) [<a href="slides\2110-topic 2-Review of C++ and Objected Oriented Programming.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 8/25 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Analysis of Algorithms [<a href="slides\2110-topic 3-Algorithm Analysis.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  8/27 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Abstract Data Type, List, Stack, and Queue [<a href="slides\2110-topic 4-Abstract Data Type, List, Stack, and Queue.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 3</b> <br> 9/1 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<font size="4" color="red"><b>Labor Day</b></font> (No Class) </font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  9/3 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Abstract Data Type, List, Stack, and Queue (cont.) [<a href="slides\2110-topic 4-Abstract Data Type, List, Stack, and Queue.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
